# genereader

./: Cargo.toml  README.md
src/: api.rs  error.rs  fasta.rs  fastq.rs  genbank.rs  helper.rs  lexer.rs  lib.rs
src/api/: file_format.rs
src/fasta/: ast.rs  error.rs  fasta.lalrpop  fasta.rs  fasta_metadata.rs  fasta_sequence.rs  mod.rs  parser.rs
src/fasta/ast/: fasta_file.rs  fasta_section.rs
src/fasta/test_data/: 2seq.fasta
src/fastq/: error.rs  fastq.rs  fastq_metadata.rs  fastq_sequence.rs  parser.rs
src/genbank/: error.rs  genbank.rs  genbank_feature_table.rs  genbank_metadata_table.rs  genbank_sequence.rs  parser.rs
src/grammar/: fasta.pest  fastq.pest  genbank.pest
src/helper/: rule_ext.rs
