[package]
name = "genereader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fastq", "fasta"]
fasta = []
fastq = []

[dependencies]
regex = "1.7.0"
thiserror = "1.0.38"
pest_derive = "2.5.2"
pest = "2.5.2"

[dev-dependencies]
indoc = "1.0.8"
